# qbe-hs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  qbe.cabal
.builds/: all.yml
golden/: call.qbe  const.qbe  data.qbe  function.qbe  hello_world.qbe  ident.qbe  inst.qbe  jmp.qbe  jnz.qbe  linkage.qbe  opaque.qbe  phi.qbe  ret.qbe  type.qbe  typedef.qbe  val.qbe
src/Language/: QBE.hs
test/: Main.hs
