cabal-version:      3.0
name:               qbe
-- First component matches the QBE major version
version:            1.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Francesco Gazzetta
maintainer:         fgaz@fgaz.me
copyright:          2022 Francesco Gazzetta
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: golden/*.qbe

common common
    ghc-options: -Wall
                 -Wunused-packages
                 -Wmissing-home-modules
                 -Wredundant-constraints
                 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
    default-language: Haskell2010

library
    import:           common
    exposed-modules:  Language.QBE
    -- other-modules:
    other-extensions: DataKinds
                      KindSignatures
                      GeneralizedNewtypeDeriving
                      FlexibleInstances
                      OverloadedStrings
    build-depends:    base ^>=4.16.1.0
                    , text
                    , text-short
                    , bytestring
                    , hashable
                    , deepseq
                    , binary
                    , prettyprinter
    hs-source-dirs:   src

test-suite golden
    import:           common
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base
                    , qbe
                    , filepath
                    , tasty
                    , tasty-silver
                    , prettyprinter
    other-extensions: TypeApplications
                      OverloadedStrings
                      DataKinds
                      ExistentialQuantification
